test/pass/enums_and_variants/multiple_member_functions.lly
enum Option[A] {
    Some(A)
    None

    define with_default[A](a: *integer = 0) : Option[A] {
        return self
    }

    define and_then[A](f: function(A => Option[A])) : Option[A] {
        match self: {
            case Some(s):
                return f(s)
            case None:
                return None
        }
    }
    define force[A] : A {
        match self: {
            case Some(s):
                return s
            case None:
                raise ValueError::new("No value is present.")
        }
    }
}

var v = Some(10)

if 
    v.and_then({|a| Some(a * a)})
     .with_default()
     .and_then({|a| Some(a * a)})
     .with_default(1)
     .force()
    != 10000:
    stderr.print("Failed.")
