test/fail/match/match_incomplete.lly
#[
SyntaxError: Match pattern not exhaustive. The following case(s) are missing:
* None
Where: File "match_incomplete.lly" at line 17
]#

enum Option[A] {
    Some(A)
    None
}

var v = None

match v: {
    case Some(s):
        print("Impossible!\n")
}
